--- a/assets/css/dw.css
+++ b/assets/css/dw.css
@@ -1,1 +1,131 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}body{font-family:"bryant-web-condensed","Helvetica","Arial",sans-serif}#page_container{width:88%;max-width:1080px;margin-left:auto;margin-right:auto}
+/* line 17, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* line 20, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+body {
+  line-height: 1;
+}
+
+/* line 22, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none;
+}
+
+/* line 24, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 26, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+/* line 28, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: none;
+}
+/* line 101, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+  content: none;
+}
+
+/* line 30, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none;
+}
+
+/* line 114, ../../../../../.rvm/gems/ruby-1.9.3-p125@dw/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+  display: block;
+}
+
+/* line 12, ../../sass/dw.sass */
+body {
+  background-color: #f3f3f3;
+}
+
+/* line 15, ../../sass/dw.sass */
+#page_container {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.4em 8.333%;
+  border-top: 4px solid #dd3800;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+@media (min-width: 768px) {
+  /* line 15, ../../sass/dw.sass */
+  #page_container {
+    width: 640px;
+    padding: 3em 0;
+  }
+}
+
+/* line 33, ../../sass/dw.sass */
+body {
+  font-family: "bryant-web-condensed", "Helvetica", "Arial", sans-serif;
+  font-size: 1.4em;
+  line-height: 1.2em;
+  font-weight: 400;
+  color: #555555;
+}
+
+/* line 40, ../../sass/dw.sass */
+a {
+  text-decoration: underline;
+  color: #111111;
+}
+/* line 44, ../../sass/dw.sass */
+a:hover {
+  text-decoration: none;
+}
+
+/* line 47, ../../sass/dw.sass */
+h1 {
+  font-size: 1.4em;
+  line-height: 1.2em;
+  margin-bottom: 0.6em;
+}
+@media (min-width: 768px) {
+  /* line 47, ../../sass/dw.sass */
+  h1 {
+    font-size: 1.6em;
+    line-height: 1.2em;
+  }
+}
+
+/* line 56, ../../sass/dw.sass */
+h2 {
+  font-size: 1em;
+  margin-bottom: 0.6em;
+}
+
+/* line 60, ../../sass/dw.sass */
+h3 {
+  font-size: 0.75em;
+}
