--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Daniel Wilber">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta name="description" content="Daniel Wilber is an interaction designer living in Ventura, CA">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
   <!-- Favicons -->
   <link rel="shortcut icon" type="image/x-icon" href="assets/ico/favicon.ico">
