--- a/assets/css/dw.css
+++ b/assets/css/dw.css
@@ -63,69 +63,144 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 12, ../../sass/dw.sass */
+/* line 13, ../../sass/dw.sass */
 body {
-  background-color: #f3f3f3;
+  min-width: 320px;
+  background-color: #f5f2f1;
 }
 
-/* line 15, ../../sass/dw.sass */
+/* line 17, ../../sass/dw.sass */
 #page_container {
   margin-left: auto;
   margin-right: auto;
-  padding: 1.4em 8.333%;
+  padding: 1.4em 4%;
   border-top: 4px solid #dd3800;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 @media (min-width: 768px) {
-  /* line 15, ../../sass/dw.sass */
+  /* line 17, ../../sass/dw.sass */
   #page_container {
     width: 640px;
     padding: 3em 0;
   }
 }
 
-/* line 33, ../../sass/dw.sass */
+/* line 35, ../../sass/dw.sass */
 body {
   font-family: "bryant-web-condensed", "Helvetica", "Arial", sans-serif;
-  font-size: 1.4em;
-  line-height: 1.2em;
+  font-size: 18px;
+  line-height: 24px;
   font-weight: 400;
-  color: #555555;
+  color: #737373;
 }
 
-/* line 40, ../../sass/dw.sass */
+/* line 42, ../../sass/dw.sass */
 a {
   text-decoration: underline;
   color: #111111;
 }
-/* line 44, ../../sass/dw.sass */
+/* line 45, ../../sass/dw.sass */
 a:hover {
   text-decoration: none;
 }
 
-/* line 47, ../../sass/dw.sass */
+/* line 48, ../../sass/dw.sass */
 h1 {
-  font-size: 1.4em;
-  line-height: 1.2em;
-  margin-bottom: 0.6em;
+  font-size: 28px;
+  line-height: 35px;
+}
+@media (min-width: 480px) {
+  /* line 48, ../../sass/dw.sass */
+  h1 {
+    font-size: 36px;
+    line-height: 42px;
+  }
 }
 @media (min-width: 768px) {
-  /* line 47, ../../sass/dw.sass */
+  /* line 48, ../../sass/dw.sass */
   h1 {
-    font-size: 1.6em;
-    line-height: 1.2em;
+    font-size: 46px;
+    line-height: 50px;
   }
 }
 
-/* line 56, ../../sass/dw.sass */
+/* line 58, ../../sass/dw.sass */
 h2 {
-  font-size: 1em;
-  margin-bottom: 0.6em;
+  font-size: 20px;
+}
+@media (min-width: 768px) {
+  /* line 58, ../../sass/dw.sass */
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
 
-/* line 60, ../../sass/dw.sass */
+/* line 64, ../../sass/dw.sass */
 h3 {
-  font-size: 0.75em;
+  font-size: 16px;
+}
+@media (min-width: 768px) {
+  /* line 64, ../../sass/dw.sass */
+  h3 {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+/* line 77, ../../sass/dw.sass */
+#home-intro {
+  margin-bottom: 24px;
+  overflow: hidden;
+  *zoom: 1;
+}
+/* line 81, ../../sass/dw.sass */
+#home-intro img {
+  float: left;
+  width: 70px;
+  height: auto;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+  border-radius: 100px;
+}
+@media (min-width: 480px) {
+  /* line 81, ../../sass/dw.sass */
+  #home-intro img {
+    width: 100px;
+  }
+}
+@media (min-width: 768px) {
+  /* line 81, ../../sass/dw.sass */
+  #home-intro img {
+    width: 140px;
+  }
+}
+/* line 91, ../../sass/dw.sass */
+#home-intro h1 {
+  float: left;
+  margin-left: 12px;
+  width: 70%;
+}
+@media (min-width: 480px) {
+  /* line 91, ../../sass/dw.sass */
+  #home-intro h1 {
+    margin-left: 24px;
+    padding-top: 8px;
+  }
+}
+@media (min-width: 768px) {
+  /* line 91, ../../sass/dw.sass */
+  #home-intro h1 {
+    margin-left: 36px;
+    padding-top: 16px;
+  }
+}
+
+/* line 103, ../../sass/dw.sass */
+#home-content h2 {
+  margin-bottom: 24px;
 }
