--- a/_assets/stylesheets/dw.sass
+++ b/_assets/stylesheets/dw.sass
@@ -1,2 +1,93 @@
+// ============================================================================
+// Variabless
+// ============================================================================
+$blue: #2C2C7D
+$red: #A72B1D
+
+$apercuRegular: "Apercu Regular", "Helvetica Neue", Helvetica, sans-serif
+$apercuBold: "Apercu Bold", "Helvetica Neue", Helvetica, sans-serif
+
+// ============================================================================
+// Typography
+// ============================================================================
+html *
+  visibility: hidden
+
+html.wf-active *
+  visibility: visible
+
 body
-  background-color: pink
+  font-family: $apercuRegular
+  font-weight: normal
+  font-style: normal
+  color: $blue
+
+h1, h2, h3, h4, h5
+  font-family: $apercuBold
+  margin: 0
+  font-weight: bold
+
+h1
+  font-size: 1.6em
+  margin-bottom: .2em
+
+h2
+  line-height: 1.4em
+  margin-bottom: .2em
+
+p
+  font-size: 1.1em
+  line-height: 1.6em
+  margin: 0
+
+a, a:visited
+  color: $red
+
+  &:hover
+    text-decoration: none
+
+// ============================================================================
+// Global Layout
+// ============================================================================
+body
+  padding: 1em .8em
+
+.wrapper
+  max-width: 34em
+  margin: 0 auto
+
+footer
+  border-top: 4px solid $blue
+  padding-top: 1em
+
+// ============================================================================
+// Home Page
+// ============================================================================
+.home-section
+  margin-bottom: 2em
+
+#home-header
+  margin-bottom: 2em
+
+  h1
+    padding-bottom: .4em
+    border-bottom: 4px solid $blue
+
+#home-elsewhere
+  margin-top: 0
+  padding: 0
+  list-style: none
+
+  li
+    position: relative
+    height: 1.6em
+    font-size: 1.1em
+
+    .label, a
+      position: absolute
+
+    .label
+      left: 0
+
+    a
+      left: 6em
