Pulling in posts on home page

--- a/_assets/stylesheets/dw.sass
+++ b/_assets/stylesheets/dw.sass
@@ -8,10 +8,13 @@ $apercuRegular: "Apercu Regular", "Helvetica Neue", Helvetica, sans-serif
 $apercuBold: "Apercu Bold", "Helvetica Neue", Helvetica, sans-serif
 
 $mediaTablet: "screen and (min-width: 40em)"
+$mediaDesktop: "screen and (min-width: 60em)"
 
 // ============================================================================
 // Typography
 // ============================================================================
+
+// Global
 html *
   visibility: hidden
 
@@ -24,6 +27,7 @@ body
   font-style: normal
   color: $blue
 
+// Headers
 h1, h2, h3, h4, h5
   font-family: $apercuBold
   margin: 0
@@ -32,21 +36,34 @@ h1, h2, h3, h4, h5
 h1
   font-size: 1.6em
   margin-bottom: .2em
+  padding-bottom: .4em
+  border-bottom: 4px solid $blue
 
 h2
   line-height: 1.4em
   margin-bottom: .2em
 
+// Body Elements
 p
-  font-size: 1.1em
-  line-height: 1.6em
   margin: 0
 
+p, li, a
+  font-size: 1.1em
+  font-size: 1.1em
+  line-height: 1.6em
+
+// Links
 a, a:visited
   color: $red
 
   &:hover
     text-decoration: none
+
+// Lists
+ul
+  margin-top: 0
+  padding: 0
+  list-style: none
 
 // ============================================================================
 // Global Layout
@@ -71,28 +88,15 @@ footer
 .home-section
   margin-bottom: 2em
 
-#home-header
-  margin-bottom: 2em
+#home-elsewhere li
+  position: relative
+  height: 1.6em
 
-  h1
-    padding-bottom: .4em
-    border-bottom: 4px solid $blue
+  .label, a
+    position: absolute
 
-#home-elsewhere
-  margin-top: 0
-  padding: 0
-  list-style: none
+  .label
+    left: 0
 
-  li
-    position: relative
-    height: 1.6em
-    font-size: 1.1em
-
-    .label, a
-      position: absolute
-
-    .label
-      left: 0
-
-    a
-      left: 6em
+  a
+    left: 6em
